tests/snapshots/execution_spec__test-enum-default.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

type News {
  foo: Status
  id: Int
}

type NewsData {
  news: [News]!
}

scalar PhoneNumber

type Query {
  news: NewsData!
}

enum Status {
  DRAFT
  ND
  PUBLISHED
}

scalar Url

schema {
  query: Query
}
