tests/snapshots/execution_spec__test-enum-merge.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @upstream(baseURL: "http://jsonplacheholder.typicode.com") {
  query: Query
}

enum Foo {
  BAR
  BAZ
  BOOM
}

type Query {
  foo: Foo @http(path: "/foo")
}
