tests/snapshots/execution_spec__test-enum.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

enum Foo {
  BAR
  BAZ
}

scalar JSON

scalar PhoneNumber

type Query {
  foo(val: String!): Foo
}

scalar Url

schema {
  query: Query
}
