tests/snapshots/execution_spec__test-enum.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream(baseURL: "http://localhost:8080") {
  query: Query
}

enum Foo {
  BAR
  BAZ
}

type Query {
  foo(val: String!): Foo @expr(body: "{{args.val}}")
}
