tests/snapshots/execution_spec__test-enum.md_test_2.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "internal: invalid item for enum \"Foo\"",
        "locations": [
          {
            "line": 1,
            "column": 9
          }
        ],
        "path": [
          "foo"
        ]
      }
    ]
  }
}
