tests/snapshots/execution_spec__test-expr-concat.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "concat": [
        1,
        2,
        3,
        4
      ]
    }
  }
}
