tests/snapshots/execution_spec__test-expr-concat.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Query {
  concat: [Int]
}

scalar Url

schema {
  query: Query
}
