tests/snapshots/execution_spec__test-expr-errors.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Parsing failed because of missing field `body`",
    "trace": [
      "@expr"
    ],
    "description": null
  },
  {
    "message": "Parsing failed because of unknown variant `unsupported`, expected one of `http`, `grpc`, `graphQL`, `call`, `const`, `if`, `and`, `or`, `cond`, `defaultTo`, `isEmpty`, `not`, `concat`, `intersection`, `difference`, `eq`, `gt`, `gte`, `lt`, `lte`, `max`, `min`, `path`, `pathEq`, `propEq`, `sortPath`, `symmetricDifference`, `union`, `mod`, `add`, `dec`, `divide`, `inc`, `multiply`, `negate`, `product`, `subtract`, `sum`",
    "trace": [
      "@expr",
      "body"
    ],
    "description": null
  }
]
