tests/snapshots/execution_spec__test-expr-if-errors.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Parsing failed because of missing field `cond`",
    "trace": [
      "@expr",
      "body",
      ".",
      "if"
    ],
    "description": null
  },
  {
    "message": "Parsing failed because of missing field `else`",
    "trace": [
      "@expr",
      "body",
      ".",
      "if"
    ],
    "description": null
  },
  {
    "message": "Parsing failed because of missing field `then`",
    "trace": [
      "@expr",
      "body",
      ".",
      "if"
    ],
    "description": null
  }
]
